# catmunchnet-dns-whois-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile-unbound  Dockerfile.arm64
.github/workflows/: build-allinone.yaml  build-unbound.yaml  build.yaml
docker/: supervisord.conf  unbound.conf
kubernetes/: daemonset.yaml  secret.yaml  service.yaml
src/: config.rs  datasource.rs  main.rs  resource.rs  service.rs  store.rs
src/datasource/: git.rs
src/resource/: autnum.rs  domain.rs  inet6num.rs  inetnum.rs  route.rs  route6.rs
src/service/: dns.rs  healthcheck.rs  whois.rs
src/store/: memory.rs
src/store/memory/: iptrie.rs
src/util/: cidr.rs
