[package]
name = "dns-whois-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.2"
clap = { version = "4.5.0", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-util = "0.7.10"
git2 = { version = "0.18.2", features = ["vendored-openssl"] }
hickory-server = "0.24.0"
hickory-client = "0.24.0"
hickory-resolver = "0.24.0"
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.11.1"
serde = "1.0.196"
serde_yaml = "0.9.31"
futures-util = "0.3.30"
regex = "1.10.3"
lazy_static = "1.4.0"
actix-web = "4.5.1"
simple-error = "0.3.0"

[profile.release]
strip = true
lto = true
